Login page with css

--- a/Login.html
+++ b/Login.html
@@ -1,7 +1,45 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet">
+        <title>Login page</title>
+        <link rel="stylesheet" href="login.css">
         <link rel="icon" href="image.png">
     </head>
+    <body>
+        <div class="outer">
+            <form>
+                <table class="inner">
+                    <tr>
+        
+                        <h3 class="Log">Login</h3>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <lable for="Email" class="t">Email</lable>
+                        </td>
+                        <td>
+                            <input type="email" placeholder="Enter a Email" id="Email">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <lable for="Password" class="t">Password</lable>
+                        </td>
+                        <td>
+                            <input type="password" placeholder="Enter a Password" id="Password">
+                        </td>
+                    </tr>
+                    
+                    <tr >
+                        <td colspan="2" style="padding: 20px;">
+                        <button class="But">
+                            Submit
+                        </button>
+                        </td>
+                    </tr>
+                </table>
+            </form>
+        </div>
+    </body>
 </html>
